--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     Hi this is Dipin. I am learning web development.
+    I worked at Atos Syntel, TalentoHCM and Stryker.
+    I studied Computer Science at STIET affiliated to JNTU.
 </body>
 </html>
