--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     Hi this is Dipin. I am learning web development.
     I worked at Atos Syntel, TalentoHCM and Stryker.
     I studied Computer Science at STIET affiliated to JNTU.
+
+    I have worked on few CLI apps. I'll showcase it here too.
 </body>
 </html>
