--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     I studied Computer Science at STIET affiliated to JNTU.
 
     I have worked on few CLI apps. I'll showcase it here too.
+
+    I like reading non fiction books.
+    I watch movies and listen to Music.
 </body>
 </html>
